--- a/FA2022_LD1_TeamA/Assets/Scripts/Menus/MainMenuTemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/Menus/MainMenuTemplate.uxml
@@ -1,3 +1,3 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Button tabindex="-1" text="Start Game" display-tooltip-when-elided="true" name="Start-Game" style="height: 605px; width: 787px;" />
+    <ui:Button tabindex="-1" text="Start Game" display-tooltip-when-elided="true" name="StartGame" style="height: 605px; width: 787px;" />
 </ui:UXML>
