--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
@@ -1,3 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="HealthGroup" style="height: 76px; width: 292px; align-items: center; justify-content: center;" />
+    <ui:VisualElement name="HealthGroup" style="height: 85px; width: 302px; align-items: stretch; justify-content: space-between; background-image: none; flex-direction: column; margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 10px;">
+        <ui:VisualElement name="HealthRowOne" style="margin-left: 5px; margin-right: 5px; margin-top: 5px; margin-bottom: 5px; align-items: flex-start; flex-direction: row; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+        <ui:VisualElement name="HealthRowTwo" style="margin-left: 5px; margin-right: 5px; margin-top: 5px; margin-bottom: 5px;" />
+        <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: none; visibility: visible; overflow: visible;" />
+    </ui:VisualElement>
 </ui:UXML>
