--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
@@ -1,7 +1,12 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="HealthGroup" style="height: 85px; width: 302px; align-items: stretch; justify-content: space-between; background-image: none; flex-direction: column; margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 10px;">
-        <ui:VisualElement name="HealthRowOne" style="margin-left: 5px; margin-right: 5px; margin-top: 5px; margin-bottom: 5px; align-items: flex-start; flex-direction: row; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
-        <ui:VisualElement name="HealthRowTwo" style="margin-left: 5px; margin-right: 5px; margin-top: 5px; margin-bottom: 5px;" />
-        <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: none; visibility: visible; overflow: visible;" />
+    <Style src="project://database/Assets/Scripts/UI/Graphics/HealthSprite.uss?fileID=7433441132597879392&amp;guid=498bee6a9e279274880b92916dbe7168&amp;type=3#HealthSprite" />
+    <ui:VisualElement>
+        <ui:VisualElement name="HealthGroup" style="height: 85px; width: 354px; align-items: stretch; justify-content: space-between; background-image: none; flex-direction: column; margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 10px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
+            <ui:VisualElement name="HealthRowOne" style="margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 30px; align-items: flex-start; flex-direction: row; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+            <ui:VisualElement name="HealthRowTwo" style="margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 10px; flex-direction: row; align-items: flex-start;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="Sprites" style="opacity: 0;">
+        <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
     </ui:VisualElement>
 </ui:UXML>
