--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
@@ -4,3 +4,6 @@
     background-image: url('project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&guid=2e9b4c3762889844f934c8a1059c5f53&type=3#Spr_Heart');
     margin-right: 3px;
 }
+
+.unity-progress-bar {
+}
