--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
@@ -6,11 +6,11 @@
             <ui:VisualElement name="HealthRowTwo" style="margin-left: 10px; margin-right: 10px; margin-top: 0; margin-bottom: 10px; flex-direction: row; align-items: flex-start;" />
         </ui:VisualElement>
         <ui:VisualElement name="StaminaGroup" style="margin-left: 10px; margin-right: 10px; margin-top: 0; margin-bottom: 10px;">
-            <ui:VisualElement name="Stamina" style="background-color: rgba(0, 255, 29, 255); width: 150px; height: 20px;" />
+            <ui:VisualElement name="StaminaBar" style="background-color: rgb(0, 255, 29); width: 150px; height: 20px;" />
         </ui:VisualElement>
-    </ui:VisualElement>
-    <ui:VisualElement name="Sprites" style="opacity: 0;">
-        <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
-        <ui:VisualElement name="Coin" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Coin.png?fileID=2800000&amp;guid=404f760c4b487ed46947514c512e1c53&amp;type=3#Spr_Coin&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
+        <ui:VisualElement name="Sprites" style="opacity: 0;">
+            <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
+            <ui:VisualElement name="Coin" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Coin.png?fileID=2800000&amp;guid=404f760c4b487ed46947514c512e1c53&amp;type=3#Spr_Coin&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
