Stamina UI (WIP)

--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
@@ -5,5 +5,8 @@
     margin-right: 3px;
 }
 
-.unity-progress-bar {
+.StaminaBar {
+    width: 150px;
+    height: 20px;
+    background-color: #00FF1D;
 }
