--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUITemplate.uxml
@@ -6,7 +6,7 @@
             <ui:VisualElement name="HealthRowTwo" style="margin-left: 10px; margin-right: 10px; margin-top: 0; margin-bottom: 10px; flex-direction: row; align-items: flex-start;" />
         </ui:VisualElement>
         <ui:VisualElement name="StaminaGroup" style="margin-left: 10px; margin-right: 10px; margin-top: 0; margin-bottom: 10px;">
-            <ui:VisualElement name="StaminaBar" class="StaminaBar" />
+            <ui:ProgressBar name="StaminaBar" high-value="1" class="StaminaBar" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; -unity-background-image-tint-color: rgb(7, 255, 0);" />
         </ui:VisualElement>
         <ui:VisualElement name="Sprites" style="opacity: 0;">
             <ui:VisualElement name="Health" style="background-image: url(&apos;project://database/Assets/Sprite/Spr_Heart.png?fileID=2800000&amp;guid=2e9b4c3762889844f934c8a1059c5f53&amp;type=3#Spr_Heart&apos;); -unity-background-scale-mode: stretch-to-fill; height: 32px; width: 32px; flex-direction: column; margin-right: 3px; display: flex; visibility: visible; overflow: visible;" />
