--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/PlayerUIStyle.uss
@@ -5,15 +5,21 @@
     margin-right: 3px;
 }
 
+.CoinSprite {
+    width: 16px;
+    height: 16px;
+    background-image: url('project://database/Assets/Sprite/Spr_Coin.png?fileID=2800000&guid=404f760c4b487ed46947514c512e1c53&type=3#Spr_Coin');
+}
+
 .StaminaBar .unity-progress-bar__background {
     width: 150px;
     height: 20px;
     background-color: rgb(8, 53, 13);
     margin: 0;
-    -unity-background-image-tint-color: rgba(2, 255, 0, 255);
+    -unity-background-image-tint-color: rgb(2, 255, 0);
 }
 
 .unity-progress-bar__progress {
-    -unity-background-image-tint-color: rgba(0, 255, 25, 255);
-    background-color: rgba(32, 255, 0, 255);
+    -unity-background-image-tint-color: rgb(0, 255, 25);
+    background-color: rgb(32, 255, 0);
 }
