--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/Menus/PauseMenuTemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/Menus/PauseMenuTemplate.uxml
@@ -1,5 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="Text">
-        <ui:Label tabindex="-1" text="PAUSED" display-tooltip-when-elided="true" name="PauseText" style="-unity-text-align: upper-center; -unity-font-style: bold; font-size: 100px;" />
+    <ui:VisualElement style="align-items: center;">
+        <ui:VisualElement name="PauseBackdrop" style="background-image: url(&apos;project://database/Assets/Sprite/UI/Spr_PauseBackground.png?fileID=2800000&amp;guid=c4bf3c6aeb29bba42b119ee94e5f9609&amp;type=3#Spr_PauseBackground&apos;); height: 548px; align-items: center; width: 469px; flex-direction: column; justify-content: space-around;">
+            <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="Resume" style="background-image: url(&apos;project://database/Assets/Sprite/UI/Spr_Resume.png?fileID=21300000&amp;guid=2ea0234ebf5482d428d32df6f6d8c8a7&amp;type=3#Spr_Resume&apos;); background-color: rgba(255, 255, 255, 0); max-width: 146px; max-height: 84px; width: 146px; height: 84px;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
