--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/Menus/Pause Menu/PauseMenuStyle.uss
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/Menus/Pause Menu/PauseMenuStyle.uss
@@ -3,8 +3,8 @@
     background-color: rgba(255, 255, 255, 0);
     max-width: none;
     max-height: none;
-    width: 109px;
-    height: 63px;
+    width: 30%;
+    height: 15%;
     margin-left: 3px;
     margin-right: 3px;
     margin-top: 3px;
@@ -24,8 +24,8 @@
     background-color: rgba(255, 255, 255, 0);
     max-width: none;
     max-height: none;
-    width: 109px;
-    height: 63px;
+    width: 30%;
+    height: 15%;
     margin-left: 3px;
     margin-right: 3px;
     margin-top: 3px;
