--- a/FA2022_LD1_TeamA/Assets/Scripts/UI/HUD/DialogueHUD/DialogueUITemplate.uxml
+++ b/FA2022_LD1_TeamA/Assets/Scripts/UI/HUD/DialogueHUD/DialogueUITemplate.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Scripts/UI/HUD/DialogueHUD/DialogueBoxUIStyle.uss?fileID=7433441132597879392&amp;guid=c075bceb121435040a0e1a4610f4ba2d&amp;type=3#DialogueBoxUIStyle" />
+    <ui:VisualElement name="Character" style="width: 100%; height: 100%; position: absolute;" />
     <ui:VisualElement name="Container">
         <ui:VisualElement name="DialogueBox" style="background-image: url(&apos;project://database/Assets/Sprite/UI/Dialogue/Spr_Textbox.png?fileID=2800000&amp;guid=eb8ec910677caa5458c2758922304ceb&amp;type=3#Spr_Textbox&apos;); width: 1920px; height: 1080px;">
             <ui:Button display-tooltip-when-elided="true" name="Continue" style="overflow: visible; height: 100%; background-color: rgba(188, 188, 188, 0); -unity-text-outline-color: rgba(0, 0, 0, 0); width: 100%; border-left-color: rgba(106, 83, 83, 0); border-right-color: rgba(106, 83, 83, 0); border-top-color: rgba(106, 83, 83, 0); border-bottom-color: rgba(106, 83, 83, 0);" />
